# sistemas_distribuidos

./: .gitignore  CMakeLists.txt  readme.md
pipes/: consumidor.c
pipes_v1/: producer.c
pipes_v2/: produtor-consumidor.c
sinais/ambos/: receiver.c
sinais/blocking_wait/: receiver.c
sinais/busy_wait/: receiver.c  sender.c
sockets/: consumer.c  producer.c
sockets_it/: consumer.c  producer.c
